@@ -2,7 +2,7 @@ Package: sensR
 Type: Package
 Title: Thurstonian Models for Sensory Discrimination
 Version: 1.4-6
-Date: 2015-03-02
+Date: 2015-07-29
 Authors@R: c(person(given="Rune Haubo Bojesen", family="Christensen",
 	   email="rhbc@dtu.dk", role=c("aut")),
 	   person(given="Per Bruun", family="Brockhoff",
@@ -18,3 +18,12 @@ Description: Provides methods for sensory discrimination methods;
   comparisons of different d-primes. Methods for profile likelihood
   confidence intervals and plotting are included.
 License: GPL-2 | GPL-3
+Author: Rune Haubo Bojesen Christensen [aut],
+  Per Bruun Brockhoff [aut, cre]
+Maintainer: Per Bruun Brockhoff <perbb@dtu.dk>
+Repository: R-Forge
+Repository/R-Forge/Project: sensr
+Repository/R-Forge/Revision: 86
+Repository/R-Forge/DateTimeStamp: 2015-03-17 09:20:52
+Date/Publication: 2015-03-17 09:20:52
+Packaged: 2015-03-17 09:25:33 UTC; rforge
